--- a/x360ce.App/MainForm.resx
+++ b/x360ce.App/MainForm.resx
@@ -124,80 +124,80 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAD8
-        EAAAAk1TRnQBSQFMAgEBBQEAAUgBAAFIAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
-        AwABIAMAAQEBAAEgBgABIP8A/wD/ACEAARQBWQFsAf8BHQFkAYIB/wEgAWsBiQH/AR8BaQGIAf8BHwFp
-        AYgB/wEfAWkBiAH/AR8BaQGIAf8BIAFrAYkB/wEdAWQBggH/ARQBWgFtAf/YAAEYAV8BdAH/AXIB5wL/
-        AYYB7wL/AYUB7gL/AYUB7gL/AYUB7gL/AYUB7gL/AYYB7wL/AXEB6AL/ARgBXwF0Af/YAAEXAV4BcwH/
-        AWUB5wH+Af8BbgHqAfwB/wFtAekB+wH/AW0B6QH7Af8BbQHpAfsB/wFtAekB+wH/AW4B6gH8Af8BZQHn
-        Af4B/wEXAV4BcwH/2AABEwFXAWoB/wFVAc4B5gH/AVkB0AHiAf8BWAHPAeIB/wFYAc8B4gH/AVgBzwHi
-        Af8BWAHPAeIB/wFZAdAB4gH/AVQBzwHmAf8BEQFXAWoB/9gAAQwBTwFjAf8BQgG4AdEB/wFDAbgBzgH/
-        AUMBtwHNAf8BQwG3Ac0B/wFDAbcBzQH/AUMBtwHNAf8BQwG4Ac4B/wFCAbgB0QH/AQwBTwFjAf/YAAEI
-        AUkBWwH/ATIBogG6Af8BLwGeAbYB/wErAZ0BtAH/ASsBnQG0Af8BKwGdAbQB/wErAZ0BtAH/AS8BngG2
-        Af8BMgGiAboB/wEIAUkBWwH/2AABAgFAAVIB/wFKAaIBtgH/AVIBpAG2Af8BUQGiAbUB/wFPAaIBtQH/
-        AU8BogG1Af8BUQGiAbUB/wFSAaQBtgH/AUoBogG2Af8BAQFCAVQB/9kAATgBSgH/AWYBqAG4Af8BggGy
-        Ab8B/wGAAbABvgH/AYABsAG+Af8BgAGwAb4B/wGAAbABvgH/AYIBsgG/Af8BZgGoAbgB/wEAATkBSwH/
-        2QABMQFBAf8BZgGiAbAB/wGQAbYBwQH/AY4BtAG/Af8BjgG0Ab8B/wGOAbQBvwH/AY4BtAG/Af8BkAG2
-        AcEB/wFmAaIBsAH/AQABMAFAAf/ZAAEsATsB/wEAAS0BPAH/AQABLQE8Af8BAAEtATwB/wEAAS0BPAH/
-        AQABLQE8Af8BAAEtATwB/wEAAS0BPAH/AQABLQE8Af8BAAEtATwB//8A/wD/AP8A/wD/AN4AAVwBPQEO
-        Af8BawFFARMB/wFxAUoBFQH/AXEBSQEVAf8BcQFJARUB/wFxAUkBFQH/AXEBSQEVAf8BcQFKARUB/wFr
-        AUUBEwH/AV0BPQEOAf8YAAESAVoBJgH/ARcBaQEtAf8BGQFuAS8B/wEYAW4BLwH/ARgBbgEvAf8BGAFu
-        AS8B/wEYAW4BLwH/ARkBbgEvAf8BFwFpAS0B/wESAVsBJgH/GAABTgFIAT8B/wFXAVABRwH/AV0BVgFM
-        Af8BXQFWAUwB/wFdAVYBTAH/AV0BVgFMAf8BXQFWAUwB/wFdAVYBTAH/AVcBUAFHAf8BTgFIAT8B/xgA
-        AhQBbAH/AR4BHQGCAf8CIAGJAf8BIAEfAYgB/wEgAR8BiAH/ASABHwGIAf8BIAEfAYgB/wIgAYkB/wEe
-        AR0BggH/AhQBbQH/GAABZAFBAREC/wHCAVoC/wHKAWsB/wH+AckBagH/Af4ByQFqAf8B/gHJAWoB/wH+
-        AckBagL/AcoBawL/AcEBWgH/AWUBQQERAf8YAAEVAWIBKQH/AV0B/wGaAf8BagH/AasB/wFoAf8BqgH/
-        AWgB/wGqAf8BaAH/AaoB/wFoAf8BqgH/AWoB/wGrAf8BXQH/AZoB/wEVAWIBKwH/GAABUwFNAUQB/wHb
-        Ac8BtgH/AeEB1gG7Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHhAdYBuwH/AdsBzgG2
-        Af8BUwFMAUMB/xgAARkBGAF0Af8BcgGAAv8BhgGRAv8BhQGPAv8BhQGPAv8BhQGPAv8BhQGPAv8BhgGR
-        Av8BcQGAAv8BGQEYAXQB/xgAAWMBQAERAf8B7wGxAVUB/wHtAbgBYwH/AewBtwFiAf8B7AG3AWIB/wHs
-        AbcBYgH/AewBtwFiAf8B7QG4AWMB/wHvAbEBVQH/AWMBPwERAf8YAAETAWABKAH/AVUB6QGRAf8BYAHm
-        AZwB/wFfAeUBmwH/AV8B5QGbAf8BXwHlAZsB/wFfAeUBmwH/AWAB5gGcAf8BVQHpAZEB/wETAWABKAH/
-        GAABUgFMAUMB/wHJAb0BqAH/Ac0BwgGrAf8BzAHAAaoB/wHMAcABqgH/AcwBwAGqAf8BzAHAAaoB/wHN
-        AcIBqwH/AckBvQGoAf8BUgFMAUMB/xgAARgBFwFzAf8BZQFuAf4B/wFuAYIB/AH/AW0BgQH7Af8BbQGB
-        AfsB/wFtAYEB+wH/AW0BgQH7Af8BbgGCAfwB/wFlAW4B/gH/ARgBFwFzAf8YAAFaATkBDgH/AdQBnQFJ
-        Af8B0QGgAVEB/wHRAZ8BTwH/AdEBnwFPAf8B0QGfAU8B/wHRAZ8BTwH/AdEBoAFRAf8B1AGdAUkB/wFa
-        ATkBDAH/GAABEQFXASIB/wFIAdEBdQH/AU4BzwGEAf8BTQHOAYMB/wFNAc4BgwH/AU0BzgGDAf8BTQHO
-        AYMB/wFOAc8BhAH/AUgB0QF1Af8BEQFXASIB/xgAAUwBRgE9Af8BtQGsAZcB/wG1Aa0BmQH/AbUBrAGY
-        Af8BtQGsAZgB/wG1AawBmAH/AbUBrAGYAf8BtQGtAZkB/wG1AawBlwH/AUwBRQE9Af8YAAITAWoB/wFV
-        AVsB5gH/AVkBYwHiAf8BWAFhAeIB/wFYAWEB4gH/AVgBYQHiAf8BWAFhAeIB/wFZAWMB4gH/AVQBWwHm
-        Af8CEQFqAf8YAAFRATIBCgH/AbsBhwE4Af8BugGHATsB/wG5AYcBOwH/AbkBhwE7Af8BuQGHATsB/wG5
-        AYcBOwH/AboBhwE7Af8BuwGHATgB/wFRATIBCgH/GAABDQFPASAB/wE4AbcBYgH/ATsBtAFkAf8BOwG0
-        AWQB/wE7AbQBZAH/ATsBtAFkAf8BOwG0AWQB/wE7AbQBZAH/ATgBtwFiAf8BDQFPASAB/xgAAUYBPwE4
-        Af8BoQGXAYYB/wGgAZYBhQH/AaABlgGFAf8BoAGWAYUB/wGgAZYBhQH/AaABlgGFAf8BoAGWAYUB/wGh
-        AZcBhgH/AUYBPwE4Af8YAAENAQwBYwH/AUIBRgHRAf8BQwFJAc4B/wFDAUkBzQH/AUMBSQHNAf8BQwFJ
-        Ac0B/wFDAUkBzQH/AUMBSQHOAf8BQgFGAdEB/wENAQwBYwH/GAABSAEsAQcB/wGiAWwBLAH/AZ8BaQEq
-        Af8BmwFmAScB/wGbAWYBJwH/AZsBZgEnAf8BmwFmAScB/wGfAWkBKgH/AaIBbAEsAf8BSAEsAQcB/xgA
-        AQoBRgEbAf8BLQGfAVEB/wErAZsBTwH/ASgBmQFMAf8BKAGZAUwB/wEoAZkBTAH/ASgBmQFMAf8BKwGb
-        AU8B/wEtAZ8BUQH/AQoBRgEbAf8YAAE/ATkBMgH/AY0BhAFuAf8BigGBAWsB/wGHAXUBaAH/AYcBdQFo
-        Af8BhwF1AWgB/wGHAXUBaAH/AYoBgQFrAf8BjQGEAW4B/wE/ATkBMgH/GAACCAFbAf8BMgE2AboB/wEv
-        ATMBtgH/ASsBMAG0Af8BKwEwAbQB/wErATABtAH/ASsBMAG0Af8BLwEzAbYB/wEyATYBugH/AggBWwH/
-        GAABPwEkAQMB/wGfAXQBSAH/AaEBhAFRAf8BoAGCAU8B/wGfAYEBTgH/AZ8BgQFOAf8BoAGCAU8B/wGh
-        AYQBUQH/AZ8BdAFIAf8BPwEmAQMB/xgAAQQBPQEUAf8BSgGdAWEB/wFTAZ8BaQH/AVEBngFnAf8BTwGd
-        AWYB/wFPAZ0BZgH/AVEBngFnAf8BUwGfAWkB/wFKAZ0BYQH/AQQBPQEUAf8YAAE4ATMBLQH/AZQBjgGD
-        Af8BlwGRAYkB/wGWAZABhwH/AZUBjwGGAf8BlQGPAYYB/wGWAZABhwH/AZcBkQGJAf8BlAGOAYMB/wE4
-        ATMBLQH/GAACAgFSAf8BSgFLAbYB/wFSAVQBtgH/AVEBUgG1Af8BTwFQAbUB/wFPAVABtQH/AVEBUgG1
-        Af8BUgFUAbYB/wFKAUsBtgH/AgEBVAH/GAABNQEdAQAB/wGlAY4BaQH/Aa4BmgGEAf8BrQGaAYIB/wGt
-        AZoBggH/Aa0BmgGCAf8BrQGaAYIB/wGuAZoBhAH/AaUBjgFpAf8BNQEcAQAB/xkAATMBDQH/AWkBpAGB
-        Af8BhQGtAZAB/wGDAawBjwH/AYMBrAGPAf8BgwGsAY8B/wGDAawBjwH/AYUBrQGQAf8BagGkAYEB/wEA
-        ATQBDQH/GAABMQErASYB/wGgAZsBlQH/AaoBpgGiAf8BqgGmAaEB/wGqAaYBoQH/AaoBpgGhAf8BqgGm
-        AaEB/wGqAaYBogH/AaABmwGVAf8BMQErASYB/xoAAUoB/wJmAbgB/wKCAb8B/wKAAb4B/wKAAb4B/wKA
-        Ab4B/wKAAb4B/wKCAb8B/wJmAbgB/wIAAUsB/xgAASkBFQEAAf8BnAGLAWwB/wGwAaUBlAH/Aa8BowGS
-        Af8BrwGjAZIB/wGvAaMBkgH/Aa8BowGSAf8BsAGlAZQB/wGcAYoBbAH/ASoBFgEAAf8ZAAEoAQcB/wFt
-        AZsBgAH/AZUBsQGdAf8BkwGvAZsB/wGTAa8BmwH/AZMBrwGbAf8BkwGvAZsB/wGVAbEBnQH/AWsBmwGA
-        Af8BAAEpAQcB/xgAAScBIwEfAf8BmwGXAZMB/wGxAa8BrAH/Aa8BrQGqAf8BrwGtAaoB/wGvAa0BqgH/
-        Aa8BrQGqAf8BsQGvAawB/wGbAZcBkwH/ASgBIwEfAf8aAAFBAf8CZgGwAf8CkAHBAf8CjgG/Af8CjgG/
-        Af8CjgG/Af8CjgG/Af8CkAHBAf8CZgGwAf8CAAFAAf8YAAElARUBAAH/ASQBDwEAAf8BJAEQAQAB/wEk
-        AQ8BAAH/ASQBDwEAAf8BJAEPAQAB/wEkAQ8BAAH/ASQBEAEAAf8BJAEPAQAB/wEmARIBAAH/GQABJQEI
-        Af8BAAEjAQQB/wEAASMBAgH/AQABIwECAf8BAAEjAQIB/wEAASMBAgH/AQABIwECAf8BAAEjAQIB/wEA
-        ASMBBAH/AQABJgEIAf8YAAElASEBHAH/ASQBIAEaAf8BJAEfARsB/wEkAR8BGgH/ASQBHwEaAf8BJAEf
-        ARoB/wEkAR8BGgH/ASQBHwEbAf8BJAEgARoB/wEmASIBHgH/GgABOwH/AgABPAH/AgABPAH/AgABPAH/
-        AgABPAH/AgABPAH/AgABPAH/AgABPAH/AgABPAH/AgABPAH//wD/AP8ADwABQgFNAT4HAAE+AwABKAMA
-        AUADAAEgAwABAQEAAQEGAAEBFgAD/wEAAv8GAAL/BgAC/wYAAeABBwYAAeABBwYAAeABBwYAAeABBwYA
-        AeABBwYAAeABBwYAAeABBwYAAeABBwYAAeABBwYAAeABBwYAAv8GAAL/BgAC/wYAGP8B4AEHAeABBwHg
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAD4
+        EAAAAk1TRnQBSQFMAgEBBQEAAVgBAAFYAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        AwABIAMAAQEBAAEgBgABIP8A/wD/ACEAARIBVwFqAf8BGwFiAYIB/wEeAWkBiQH/AR0BZwGIAf8BHQFn
+        AYgB/wEdAWcBiAH/AR0BZwGIAf8BHgFpAYkB/wEbAWIBggH/ARIBWAFrAf/YAAEWAV0BcgH/AXAB5wL/
+        AYYB7wL/AYUB7gL/AYUB7gL/AYUB7gL/AYUB7gL/AYYB7wL/AW8B6AL/ARYBXQFyAf/YAAEVAVwBcQH/
+        AWMB5wH+Af8BbAHqAfwB/wFrAekB+wH/AWsB6QH7Af8BawHpAfsB/wFrAekB+wH/AWwB6gH8Af8BYwHn
+        Af4B/wEVAVwBcQH/2AABEQFVAWgB/wFTAc4B5gH/AVcB0AHiAf8BVgHPAeIB/wFWAc8B4gH/AVYBzwHi
+        Af8BVgHPAeIB/wFXAdAB4gH/AVIBzwHmAf8BDwFVAWgB/9gAAQoBTQFhAf8BQAG4AdEB/wFBAbgBzgH/
+        AUEBtwHNAf8BQQG3Ac0B/wFBAbcBzQH/AUEBtwHNAf8BQQG4Ac4B/wFAAbgB0QH/AQoBTQFhAf/YAAEG
+        AUcBWQH/ATABogG6Af8BLQGeAbYB/wEpAZ0BtAH/ASkBnQG0Af8BKQGdAbQB/wEpAZ0BtAH/AS0BngG2
+        Af8BMAGiAboB/wEGAUcBWQH/2QABPgFQAf8BSAGiAbYB/wFQAaQBtgH/AU8BogG1Af8BTQGiAbUB/wFN
+        AaIBtQH/AU8BogG1Af8BUAGkAbYB/wFIAaIBtgH/AQABQAFSAf/ZAAE2AUgB/wFkAagBuAH/AYIBsgG/
+        Af8BgAGwAb4B/wGAAbABvgH/AYABsAG+Af8BgAGwAb4B/wGCAbIBvwH/AWQBqAG4Af8BAAE3AUkB/9kA
+        AS8BPwH/AWQBogGwAf8BkAG2AcEB/wGOAbQBvwH/AY4BtAG/Af8BjgG0Ab8B/wGOAbQBvwH/AZABtgHB
+        Af8BZAGiAbAB/wEAAS4BPgH/2QABKgE5Af8BAAErAToB/wEAASsBOgH/AQABKwE6Af8BAAErAToB/wEA
+        ASsBOgH/AQABKwE6Af8BAAErAToB/wEAASsBOgH/AQABKwE6Af//AP8A/wD/AP8A/wDeAAFaATsBDAH/
+        AWkBQwERAf8BbwFIARMB/wFvAUcBEwH/AW8BRwETAf8BbwFHARMB/wFvAUcBEwH/AW8BSAETAf8BaQFD
+        AREB/wFbATsBDAH/GAABEAFYASQB/wEVAWcBKwH/ARcBbAEtAf8BFgFsAS0B/wEWAWwBLQH/ARYBbAEt
+        Af8BFgFsAS0B/wEXAWwBLQH/ARUBZwErAf8BEAFZASQB/xgAAUwBRgE9Af8BVQFOAUUB/wFbAVQBSgH/
+        AVsBVAFKAf8BWwFUAUoB/wFbAVQBSgH/AVsBVAFKAf8BWwFUAUoB/wFVAU4BRQH/AUwBRgE9Af8YAAIS
+        AWoB/wEcARsBggH/Ah4BiQH/AR4BHQGIAf8BHgEdAYgB/wEeAR0BiAH/AR4BHQGIAf8CHgGJAf8BHAEb
+        AYIB/wISAWsB/xgAAWIBPwEPAv8BwgFYAv8BygFpAf8B/gHJAWgB/wH+AckBaAH/Af4ByQFoAf8B/gHJ
+        AWgC/wHKAWkC/wHBAVgB/wFjAT8BDwH/GAABEwFgAScB/wFbAf8BmgH/AWgB/wGrAf8BZgH/AaoB/wFm
+        Af8BqgH/AWYB/wGqAf8BZgH/AaoB/wFoAf8BqwH/AVsB/wGaAf8BEwFgASkB/xgAAVEBSwFCAf8B2wHP
+        AbYB/wHhAdYBuwH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4QHWAbsB/wHbAc4BtgH/
+        AVEBSgFBAf8YAAEXARYBcgH/AXABgAL/AYYBkQL/AYUBjwL/AYUBjwL/AYUBjwL/AYUBjwL/AYYBkQL/
+        AW8BgAL/ARcBFgFyAf8YAAFhAT4BDwH/Ae8BsQFTAf8B7QG4AWEB/wHsAbcBYAH/AewBtwFgAf8B7AG3
+        AWAB/wHsAbcBYAH/Ae0BuAFhAf8B7wGxAVMB/wFhAT0BDwH/GAABEQFeASYB/wFTAekBkQH/AV4B5gGc
+        Af8BXQHlAZsB/wFdAeUBmwH/AV0B5QGbAf8BXQHlAZsB/wFeAeYBnAH/AVMB6QGRAf8BEQFeASYB/xgA
+        AVABSgFBAf8ByQG9AagB/wHNAcIBqwH/AcwBwAGqAf8BzAHAAaoB/wHMAcABqgH/AcwBwAGqAf8BzQHC
+        AasB/wHJAb0BqAH/AVABSgFBAf8YAAEWARUBcQH/AWMBbAH+Af8BbAGCAfwB/wFrAYEB+wH/AWsBgQH7
+        Af8BawGBAfsB/wFrAYEB+wH/AWwBggH8Af8BYwFsAf4B/wEWARUBcQH/GAABWAE3AQwB/wHUAZ0BRwH/
+        AdEBoAFPAf8B0QGfAU0B/wHRAZ8BTQH/AdEBnwFNAf8B0QGfAU0B/wHRAaABTwH/AdQBnQFHAf8BWAE3
+        AQoB/xgAAQ8BVQEgAf8BRgHRAXMB/wFMAc8BhAH/AUsBzgGDAf8BSwHOAYMB/wFLAc4BgwH/AUsBzgGD
+        Af8BTAHPAYQB/wFGAdEBcwH/AQ8BVQEgAf8YAAFKAUQBOwH/AbUBrAGXAf8BtQGtAZkB/wG1AawBmAH/
+        AbUBrAGYAf8BtQGsAZgB/wG1AawBmAH/AbUBrQGZAf8BtQGsAZcB/wFKAUMBOwH/GAACEQFoAf8BUwFZ
+        AeYB/wFXAWEB4gH/AVYBXwHiAf8BVgFfAeIB/wFWAV8B4gH/AVYBXwHiAf8BVwFhAeIB/wFSAVkB5gH/
+        Ag8BaAH/GAABTwEwAQgB/wG7AYcBNgH/AboBhwE5Af8BuQGHATkB/wG5AYcBOQH/AbkBhwE5Af8BuQGH
+        ATkB/wG6AYcBOQH/AbsBhwE2Af8BTwEwAQgB/xgAAQsBTQEeAf8BNgG3AWAB/wE5AbQBYgH/ATkBtAFi
+        Af8BOQG0AWIB/wE5AbQBYgH/ATkBtAFiAf8BOQG0AWIB/wE2AbcBYAH/AQsBTQEeAf8YAAFEAT0BNgH/
+        AaEBlwGGAf8BoAGWAYUB/wGgAZYBhQH/AaABlgGFAf8BoAGWAYUB/wGgAZYBhQH/AaABlgGFAf8BoQGX
+        AYYB/wFEAT0BNgH/GAABCwEKAWEB/wFAAUQB0QH/AUEBRwHOAf8BQQFHAc0B/wFBAUcBzQH/AUEBRwHN
+        Af8BQQFHAc0B/wFBAUcBzgH/AUABRAHRAf8BCwEKAWEB/xgAAUYBKgEFAf8BogFqASoB/wGfAWcBKAH/
+        AZsBZAElAf8BmwFkASUB/wGbAWQBJQH/AZsBZAElAf8BnwFnASgB/wGiAWoBKgH/AUYBKgEFAf8YAAEI
+        AUQBGQH/ASsBnwFPAf8BKQGbAU0B/wEmAZkBSgH/ASYBmQFKAf8BJgGZAUoB/wEmAZkBSgH/ASkBmwFN
+        Af8BKwGfAU8B/wEIAUQBGQH/GAABPQE3ATAB/wGNAYQBbAH/AYoBgQFpAf8BhwFzAWYB/wGHAXMBZgH/
+        AYcBcwFmAf8BhwFzAWYB/wGKAYEBaQH/AY0BhAFsAf8BPQE3ATAB/xgAAgYBWQH/ATABNAG6Af8BLQEx
+        AbYB/wEpAS4BtAH/ASkBLgG0Af8BKQEuAbQB/wEpAS4BtAH/AS0BMQG2Af8BMAE0AboB/wIGAVkB/xgA
+        AT0BIgEBAf8BnwFyAUYB/wGhAYQBTwH/AaABggFNAf8BnwGBAUwB/wGfAYEBTAH/AaABggFNAf8BoQGE
+        AU8B/wGfAXIBRgH/AT0BJAEBAf8YAAECATsBEgH/AUgBnQFfAf8BUQGfAWcB/wFPAZ4BZQH/AU0BnQFk
+        Af8BTQGdAWQB/wFPAZ4BZQH/AVEBnwFnAf8BSAGdAV8B/wECATsBEgH/GAABNgExASsB/wGUAY4BgwH/
+        AZcBkQGJAf8BlgGQAYcB/wGVAY8BhgH/AZUBjwGGAf8BlgGQAYcB/wGXAZEBiQH/AZQBjgGDAf8BNgEx
+        ASsB/xoAAVAB/wFIAUkBtgH/AVABUgG2Af8BTwFQAbUB/wFNAU4BtQH/AU0BTgG1Af8BTwFQAbUB/wFQ
+        AVIBtgH/AUgBSQG2Af8CAAFSAf8YAAEzARsBAAH/AaUBjgFnAf8BrgGaAYQB/wGtAZoBggH/Aa0BmgGC
+        Af8BrQGaAYIB/wGtAZoBggH/Aa4BmgGEAf8BpQGOAWcB/wEzARoBAAH/GQABMQELAf8BZwGkAYEB/wGF
+        Aa0BkAH/AYMBrAGPAf8BgwGsAY8B/wGDAawBjwH/AYMBrAGPAf8BhQGtAZAB/wFoAaQBgQH/AQABMgEL
+        Af8YAAEvASkBJAH/AaABmwGVAf8BqgGmAaIB/wGqAaYBoQH/AaoBpgGhAf8BqgGmAaEB/wGqAaYBoQH/
+        AaoBpgGiAf8BoAGbAZUB/wEvASkBJAH/GgABSAH/AmQBuAH/AoIBvwH/AoABvgH/AoABvgH/AoABvgH/
+        AoABvgH/AoIBvwH/AmQBuAH/AgABSQH/GAABJwETAQAB/wGcAYsBagH/AbABpQGUAf8BrwGjAZIB/wGv
+        AaMBkgH/Aa8BowGSAf8BrwGjAZIB/wGwAaUBlAH/AZwBigFqAf8BKAEUAQAB/xkAASYBBQH/AWsBmwGA
+        Af8BlQGxAZ0B/wGTAa8BmwH/AZMBrwGbAf8BkwGvAZsB/wGTAa8BmwH/AZUBsQGdAf8BaQGbAYAB/wEA
+        AScBBQH/GAABJQEhAR0B/wGbAZcBkwH/AbEBrwGsAf8BrwGtAaoB/wGvAa0BqgH/Aa8BrQGqAf8BrwGt
+        AaoB/wGxAa8BrAH/AZsBlwGTAf8BJgEhAR0B/xoAAT8B/wJkAbAB/wKQAcEB/wKOAb8B/wKOAb8B/wKO
+        Ab8B/wKOAb8B/wKQAcEB/wJkAbAB/wIAAT4B/xgAASMBEwEAAf8BIgENAQAB/wEiAQ4BAAH/ASIBDQEA
+        Af8BIgENAQAB/wEiAQ0BAAH/ASIBDQEAAf8BIgEOAQAB/wEiAQ0BAAH/ASQBEAEAAf8ZAAEjAQYB/wEA
+        ASEBAgH/AQABIQEAAf8BAAEhAQAB/wEAASEBAAH/AQABIQEAAf8BAAEhAQAB/wEAASEBAAH/AQABIQEC
+        Af8BAAEkAQYB/xgAASMBHwEaAf8BIgEeARgB/wEiAR0BGQH/ASIBHQEYAf8BIgEdARgB/wEiAR0BGAH/
+        ASIBHQEYAf8BIgEdARkB/wEiAR4BGAH/ASQBIAEcAf8aAAE5Af8CAAE6Af8CAAE6Af8CAAE6Af8CAAE6
+        Af8CAAE6Af8CAAE6Af8CAAE6Af8CAAE6Af8CAAE6Af//AP8A/wAPAAFCAU0BPgcAAT4DAAEoAwABQAMA
+        ASADAAEBAQABAQYAAQEWAAP/AQAC/wYAAv8GAAL/BgAB4AEHBgAB4AEHBgAB4AEHBgAB4AEHBgAB4AEH
+        BgAB4AEHBgAB4AEHBgAB4AEHBgAB4AEHBgAB4AEHBgAC/wYAAv8GAAL/BgAY/wHgAQcB4AEHAeABBwHg
         AQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHg
         AQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHg
-        AQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHGP8L
+        AQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcY/ws=
 </value>
   </data>
   <metadata name="MainStatusStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
