--- a/x360ce.App/Documents/ChangeLog.txt
+++ b/x360ce.App/Documents/ChangeLog.txt
@@ -1,7 +1,8 @@
-﻿v3.0.6.53 (2015-06-08)
+﻿v3.0.6.54 (2015-06-08)
 - Fix: Ability to add same file due to case sensitivity.
 - Fix: Unecessary XML load.
 - Fix: Crash when unable to read file version.
+- Fix: Crash when reseting game settings to default.
 
 v3.0.6.50 (2015-06-07)
 - Fix: Crash when c:\ProgramData\X360CE is doesn't exists.
