--- a/x360ce.App/Documents/ChangeLog.txt
+++ b/x360ce.App/Documents/ChangeLog.txt
@@ -1,4 +1,8 @@
-﻿v3.0.7.55 (2015-06-08)
+﻿v3.0.7.57 (2015-06-25)
+- Update: Updated to xinput1_3.dll v3.4.1.1346.
+- Update: Updated x360ce_Games.xml.gz
+
+v3.0.7.55 (2015-06-08)
 - Fix: Ability to add same file due to case sensitivity.
 - Fix: Unecessary XML load.
 - Fix: Crash when unable to read file version.
