--- a/x360ce.App/Documents/ChangeLog.txt
+++ b/x360ce.App/Documents/ChangeLog.txt
@@ -1,6 +1,17 @@
-﻿v3.2.7.67 (2015-08-03)
+﻿v3.2.7.71 (2015-08-18)
+- Fix: x360ce.vshost.exe was appearing in the list on Controller Settings form.
+- Fix: PAD control indicator icons show wrong status colours.
+- New: Game executable will be added to game settings automatically if only one in the folder.
+- Update: Issue resolver classes updated.
+
+v3.2.7.67 (2015-08-03)
 - Fix: Incorrect XInput DLL load message.
-- New: Warning panel which detects some problems and recommends solutions (wrong platform, missing runtime, etc).
+- New: Warning panel which detects some problems and recommends solutions (wrong platform, missing runtime, etc.).
+- New: Map Direct Input controller to specific XInput position.
+
+v3.2.7.67 (2015-08-03)
+- Fix: Incorrect XInput DLL load message.
+- New: Warning panel which detects some problems and recommends solutions (wrong platform, missing runtime, etc.).
 - New: Map Direct Input controller to specific XInput position.
 
 v3.1.7.58 (2015-07-07)
@@ -14,7 +25,7 @@ v3.0.7.55 (2015-06-08)
 - Fix: Ability to add same file due to case sensitivity.
 - Fix: Unnecessary XML load.
 - Fix: Crash when unable to read file version.
-- Fix: Crash when reseting game settings to default.
+- Fix: Crash when game settings reset to default.
 - New: Look inside game file for "XInput..." strings and return appropriate XInput mask.
 
 v3.0.6.50 (2015-06-07)
