--- a/x360ce.App/Documents/ChangeLog.txt
+++ b/x360ce.App/Documents/ChangeLog.txt
@@ -1,4 +1,7 @@
-﻿v3.2.8.74 (2015-08-27)
+﻿v3.2.8.75 (2015-08-27)
+- Fix: Crashes on invalid permissions.
+
+v3.2.8.74 (2015-08-27)
 - Fix: x360ce.vshost.exe was appearing in the list on Controller Settings form.
 - Fix: PAD control indicator icons show wrong status colours.
 - New: Game executable will be added to game settings automatically if only one in the folder.
